fixed path problem